--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>SchoolAIT_TR-Chohort42.1\git prob\example_01p\p01</h1>
+    <div></div>
+    <div></div>
+    <div></div>
 </body>
 </html>
