--- a/index.html
+++ b/index.html
@@ -1,67 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>SchoolAIT_TR-Chohort42.1\git prob\example_01p\p01</h1>
+    <h1>SchoolAIT_TR-Chohort42.1git probexample_01pp01</h1>
     <div></div>
     <div></div>
     <div></div>
 </body>
-=======
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
-    <title>Document</title>
-</head>
-
-<body>
-    <header>My Company</header>
-    <main>
-        <h1>Our Team</h1>
-        <ol>
-            <li>
-                Valerian Kipke!
-            </li>
-            <li>Anton</li>
-        </ol>
-     <table>
-        <thead>
-            <tr>
-                <th>Name:</th>
-                <th>Gruppe:</th>
-                <th>Status:</th>
-            </tr>
-        </thead>
-    <tr>
-        <td>Valerian</td>
-        <td>Cohort42.1</td>
-        <td>Student</td>
-    </tr>
-    <tr>
-        <td>Julia</td>
-        <td>Cohort42.1</td>
-        <td>Student</td>
-    </tr>
-    <tr>
-        <td>Anton</td>
-        <td>Cohort42.1</td>
-        <td>Student</td>
-    </tr>
-    <tr>
-        <td>Vitaliy</td>
-        <td>Cohort42.1</td>
-        <td>Lehrer</td>
-    </tr>
-     </table>
-    </main>
-</body>
-
->>>>>>> d4c3c5e9bde517deab09190072ce098df20977e1
 </html>
